<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:baselineAligned="false"
    tools:context=".activity.EditAwardActivity">

    <include layout="@layout/appbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_margin_vertical"
            android:paddingBottom="@dimen/activity_margin_vertical"
            android:paddingStart="@dimen/activity_margin_vertical"
            android:paddingEnd="@dimen/activity_margin_vertical">

            <!-- MOVIE -->

            <!-- Movie Id -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_movie_id"
                style="@style/LabelStyle" />
            <TextView
                android:id="@+id/txtMovieId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FieldValueStyle"
                tools:text="@string/example_movie_id" />

            <!-- Imdb Id -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_imdb_id"
                style="@style/LabelStyle" />
            <TextView
                android:id="@+id/txtImdbId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FieldValueStyle"
                tools:text="@string/example_imdb_id" />

            <!-- Title -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_title"
                style="@style/LabelStyle" />
            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FieldValueStyle"
                tools:text="@string/example_movie_title" />

            <!-- AWARD -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp">

                <!-- Award Id -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_award_id"
                    style="@style/LabelStyle" />
                <TextView
                    android:id="@+id/txtAwardId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/FieldValueStyle"
                    tools:text="@string/example_award_id" />

                <!-- Award Date -->
                <TextView
                    android:labelFor="@+id/txtAwardDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_award_date"
                    style="@style/LabelStyle" />
                <TextView
                    android:id="@id/txtAwardDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_award_date"
                    style="@style/FieldValueStyle"
                    tools:text="@string/example_award_date_input" />

                <!-- Category -->
                <TextView
                    android:labelFor="@+id/radioCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_category"
                    style="@style/LabelStyle" />

                <RadioGroup
                    android:id="@id/radioCategory"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/radioCategoryMovie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/category_text_movie" />
                    <RadioButton
                        android:id="@+id/radioCategoryDvd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/category_text_dvd" />
                </RadioGroup>

                <!-- Review -->
                <TextView
                    android:labelFor="@+id/txtReview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_review"
                    style="@style/LabelStyle" />
                <EditText
                    android:id="@id/txtReview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine|textCapSentences"
                    android:lines="5"
                    android:minLines="5"
                    android:gravity="top|start"
                    android:scrollbars="vertical"
                    style="@style/FieldEditStyle"
                    tools:text="@string/example_review"
                    tools:ignore="TextFields" />

                <!-- Award Display Order -->
                <TextView
                    android:labelFor="@+id/txtDisplayOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_display_order"
                    style="@style/LabelStyle" />
                <EditText
                    android:id="@id/txtDisplayOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text|number"
                    style="@style/FieldEditStyle"
                    tools:text="1"
                    tools:ignore="TextFields" />

            </LinearLayout>

            <!-- Save / Cancel buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/button_label_cancel"
                    android:onClick="onCancel"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/button_label_save"
                    android:onClick="onSave"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
