<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_add_movie"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_margin_vertical"
    android:paddingBottom="@dimen/activity_margin_vertical"
    android:paddingStart="@dimen/activity_margin_vertical"
    android:paddingEnd="@dimen/activity_margin_vertical"
    tools:context=".activity.AddAwardActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/title_add_award" />
    <EditText
        android:id="@+id/txtImdbId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/hint_imdb_id" />

    <!--
    <Button
        android:id="@+id/btnFetchDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/button_label_fetch_details"
        android:onClick="onFetchDetails" />
        -->

    <!-- The remaining fields are hidden until the movie has been fetched. -->

    <!-- Title -->
    <TextView
        android:id="@+id/labelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/label_title"
        style="@style/LabelStyle"
        tools:visibility="visible" />
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        style="@style/FieldValueStyle"
        tools:text="Colossal"
        tools:visibility="visible" />

    <!-- Genre -->
    <TextView
        android:id="@+id/labelGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/label_genre"
        style="@style/LabelStyle"
        tools:visibility="visible" />
    <TextView
        android:id="@+id/txtGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        style="@style/FieldValueStyle"
        tools:text="Action, Comedy, Drama"
        tools:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:visibility="gone"
            android:text="@string/button_label_cancel"
            android:onClick="onCancel"
            tools:visibility="visible"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:visibility="gone"
            android:text="@string/button_label_save"
            android:onClick="onSave"
            tools:visibility="visible"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>
